fix: automatically map DATABASE_URL to DATABASE_CONNECTION_URI for Heroku
- Add automatic mapping in runWithProvider.js for database migrations
- Add automatic mapping in env.config.ts for runtime
- Add heroku-prebuild script for environment setup
- Update Procfile to export DATABASE_CONNECTION_URI in release phase
- Update HEROKU_DEPLOY.md to reflect automatic mapping
- Remove need for manual DATABASE_CONNECTION_URI configuration

This fixes the P1012 error during Heroku deployment where DATABASE_CONNECTION_URI was not found.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "db:migrate:dev": "node runWithProvider.js \"rm -rf ./prisma/migrations && cp -r ./prisma/DATABASE_PROVIDER-migrations ./prisma/migrations && npx prisma migrate dev --schema ./prisma/DATABASE_PROVIDER-schema.prisma && cp -r ./prisma/migrations/* ./prisma/DATABASE_PROVIDER-migrations\"",
     "db:migrate:dev:win": "node runWithProvider.js \"xcopy /E /I prisma\\DATABASE_PROVIDER-migrations prisma\\migrations && npx prisma migrate dev --schema prisma\\DATABASE_PROVIDER-schema.prisma\"",
     "prepare": "husky || true",
-    "postinstall": "npm run db:generate || prisma generate --schema ./prisma/postgresql-schema.prisma"
+    "postinstall": "npm run db:generate || prisma generate --schema ./prisma/postgresql-schema.prisma",
+    "heroku-prebuild": "bash scripts/heroku-prebuild.sh"
   },
   "repository": {
     "type": "git",
