fix: improve Heroku release phase database setup
- Create dedicated heroku-release.sh script for release phase
- Add proper environment variable validation and error handling
- Export DATABASE_CONNECTION_URI from DATABASE_URL in release script
- Add detailed logging for debugging Heroku deployments
- Update Procfile to use the new release script

This ensures DATABASE_CONNECTION_URI is properly set before running migrations during Heroku's release phase.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "db:migrate:dev:win": "node runWithProvider.js \"xcopy /E /I prisma\\DATABASE_PROVIDER-migrations prisma\\migrations && npx prisma migrate dev --schema prisma\\DATABASE_PROVIDER-schema.prisma\"",
     "prepare": "husky || true",
     "postinstall": "npm run db:generate || prisma generate --schema ./prisma/postgresql-schema.prisma",
-    "heroku-prebuild": "bash scripts/heroku-prebuild.sh"
+    "heroku-prebuild": "bash scripts/heroku-prebuild.sh",
+    "heroku-release": "bash scripts/heroku-release.sh"
   },
   "repository": {
     "type": "git",
